# FullStack-TodoManagement

./: .gitignore  README.md  docker-compose.yaml
backend/: .env  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0094ad012e81_update_table_item_field_description.py  3610196900ed_first_migration.py  65d05f60c983_first_migration.py  7b6e6df26402_add_image_item.py  a3f78894c9d1_update_table_user_added_user_image.py
backend/api/: celery_task.py  deps.py
backend/api/v1/: api_main.py
backend/api/v1/endpoints/: admin.py  authentication.py  items.py  users.py
backend/core/: celery.py  config.py  exceptions.py  redis.py  security.py
backend/crud/: __init__.py  crud_base.py  item_crud.py  user_crud.py
backend/db/: initial_data.py  session.py
backend/db/models/: __init__.py  base_model.py  item_model.py  permissions.py  role_model.py  user_model.py
backend/db/repository/: item_repository.py  user_repository.py
backend/schema/: item_schema.py  permission_schema.py  role_schema.py  token_schema.py  user_schema.py
backend/utils/: context_manager.py  email_controll.py
